--- a/_posts/2018-08-12-View动画源码解析.md
+++ b/_posts/2018-08-12-View动画源码解析.md
@@ -19,6 +19,14 @@ alphaAnim.duration = 3000
 button.startAnimation(alphaAnim)
 ```
 
+## Let's make it brief
+我们先直接从流程图上看从 startAnimation 开始做了什么：
+![]({{site.url}}/img/android/anim/view/startAnimation.png)
+它会调用 View 的 invalidate() 方法来进行刷新，该方法会将该 View 的大小和位置传给 invalidateInternal() 方法，该方法会调用 parent 的 invalidateChild() 方法，该方法会循环调用 parent.invalidateChildInParent 直到 parent 为空。首次 parent 为自身，返回值为自己的 parent。我们再来看下这个方法的流程图：
+![]({{site.url}}/img/android/anim/view/invalidateChildInParent.png)
+我们印象中 View 的 parent 一定是 ViewGroup，毕竟顶级 View 为 DecorView，它继承自 FrameLayout。那么 parent.invalidateChildInParent 就会一直调用的是 ViewGroup 中的该方法。而该方法主要是根据传过来的 View 的大小和位置以及自己的大小来计算出所需要绘制的区域，一直回溯到最上层得到最终所需要绘制的区域。 里面没有任何跟动画相关的操作，那么它是如何触发的呢，其实 DecorView 是会被添加到 ViewRootImpl 中，最终执行的是它的方法。它内部会将一个包含 performTraversals() 方法的 Runnable 传给 Choreographer，等到系统发出刷新信号后就会执行。该方法主要是遍历 View 树来执行 onMeasure 等方法
+
+
 ## View.startAnimation()
 首先我们来看下 View 的 startAnimation 到底做了什么：
 ```java
@@ -291,7 +299,7 @@ protected void invalidateParentCaches() {
 Runnable 被存入到 Choreographer 的待执行队列中，当屏幕绘制信号（安卓手机屏幕刷新频率为60fps，也就是16.7ms屏幕会刷新一次）到来时会被执行，这样 ViewRootImpl 的 performTranversals() 就会执行。这个方法是从 DecorView 开始遍历 View 树来执行 onMeasure 等操作的。由于每一次页面刷新都会执行 ViewRootImpl 的 performTraversal() 操作来遍历 View 树，找到发生改变的 View 来执行 onMeasure 等操作，所以我们写布局时要尽量减少层级。
 
 **我们来总结下调用 startAnimation 后的流程：**
-![]({{site.url}}/img/android/anim/startAnimation1.png)   
+可以回顾下前面的流程图    
 1. 调用 View.StartAnimation(Animation) 方法后，会调用 setAnimation() 将这个 animation 会作为 View 的全局变量保存起来
 2. 然后调用 View 的 invalidate() 方法，它会调用 parent.invalidateChild() 方法来调到 ViewGroup 中的该方法。
 3. 这时 ViewGroup 会循环执行`parent = parent.invalidateChildInParent(location, dirty)` 直到 parent 为空。
