--- a/_posts/2018-08-12-View动画源码解析.md
+++ b/_posts/2018-08-12-View动画源码解析.md
@@ -22,7 +22,7 @@ button.startAnimation(alphaAnim)
 ## Let's make it brief
 我们先直接从流程图上看从 startAnimation 开始做了什么：
 ![]({{site.url}}/img/android/anim/view/startAnimation.png)
-它会调用 View 的 invalidate() 方法来进行刷新，该方法会将该 View 的大小和位置传给 invalidateInternal() 方法，该方法会调用 parent 的 invalidateChild() 方法，该方法会循环调用 parent.invalidateChildInParent 直到 parent 为空。首次 parent 为自身，返回值为自己的 parent。我们再来看下这个方法的流程图：
+它会调用 View 的 invalidate() 方法来进行刷新，并将该 View 的大小和位置传给 invalidateInternal() 方法，然后调用 parent 的 invalidateChild()，该方法会循环调用 parent.invalidateChildInParent 直到 parent 为空。首次 parent 为自身，返回值为自己的 parent。我们再来看下这个方法的流程图：
 ![]({{site.url}}/img/android/anim/view/invalidateChildInParent.png)
 我们印象中 View 的 parent 一定是 ViewGroup，毕竟顶级 View 为 DecorView，它继承自 FrameLayout。那么 parent.invalidateChildInParent 就会一直调用的是 ViewGroup 中的该方法。而该方法主要是根据传过来的 View 的大小和位置以及自己的大小来计算出所需要绘制的区域，一直回溯到最上层得到最终所需要绘制的区域。 里面没有任何跟动画相关的操作，那么它是如何触发的呢，其实 DecorView 是会被添加到 ViewRootImpl 中，最终执行的是它的方法。它内部会将一个包含 performTraversals() 方法的 Runnable 传给 Choreographer，等到系统发出刷新信号后就会执行。该方法主要是遍历 View 树来执行 onMeasure 等方法
 
@@ -532,4 +532,5 @@ draw() 方法做了6步：
 
 ## references
 + [View 动画 Animation 运行原理解析](https://www.jianshu.com/p/48317612c164)   
++ [Android动画实现绘制原理](https://www.jianshu.com/p/db3c3b99cc9c)
    
