--- a/_posts/2018-05-06-AIDL-2.md
+++ b/_posts/2018-05-06-AIDL-2.md
@@ -94,7 +94,7 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                     reply.writeNoException();
                     return true;
                 }
-                case TRANSACTION_addAvengerInout: {
+                case TRANSACTION_addAvengerInout: { // inout 相当于结合了 in 和 out
                     data.enforceInterface(DESCRIPTOR);
                     com.example.aidlserver.aidlmodel.Avenger _arg0;
                     if ((0 != data.readInt())) {
@@ -105,7 +105,7 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                     this.addAvengerInout(_arg0);
                     reply.writeNoException();
 
-                    //下面是 (in)out 和 in 的不同之处。
+
                     if ((_arg0 != null)) {
                         reply.writeInt(1);
                         _arg0.writeToParcel(reply, android.os.Parcelable.PARCELABLE_WRITE_RETURN_VALUE);
@@ -117,13 +117,14 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                 case TRANSACTION_addAvengerOut: {
                     data.enforceInterface(DESCRIPTOR);
                     com.example.aidlserver.aidlmodel.Avenger _arg0;
-                    //out 方法和 in 很不同。in 是通过 CREATOR 创建一个对象，并将方法所需要的参数传进去
-                    //而 out 则是直接 new 一个空对象，参数直接不要。那么即使客户端传了一个参数给服务器端，服务器接收到的也是一个没有赋值的对象
+                    //out 直接 new 一个空对象，参数直接不要然后传给服务器。相当于没用传一个容器给服务器
                     _arg0 = new com.example.aidlserver.aidlmodel.Avenger();
-                    this.addAvengerOut(_arg0);
+                    this.addAvengerOut(_arg0); // 服务器端可以往这个“容器”填充内容
                     reply.writeNoException();
                     if ((_arg0 != null)) {
                         reply.writeInt(1);
+                        //再将该（修改过的）“容器”的内容写到 reply ，它后面会被写回到客户端传进来的那个对象,如果它被服务器端修改
+                        //那么客户端的该对象就会被同步修改。This is the trick that the out tag playes.
                         _arg0.writeToParcel(reply, android.os.Parcelable.PARCELABLE_WRITE_RETURN_VALUE);
                     } else {
                         reply.writeInt(0);
@@ -167,6 +168,7 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                 return _result;
             }
 
+            //in 为定向 tag 的话,服务端将会接收到该对象的完整数据，但是客户端的那个对象不会因为服务端对该参数的修改而发生变动
             @Override
             public void addAvengerIn(com.example.aidlserver.aidlmodel.Avenger avenger) throws android.os.RemoteException {
                 //创建两个 Parcel，一个用于存放参数，一个用于存放返回值
@@ -181,11 +183,11 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                     } else {
                         _data.writeInt(0);
                     }
-                    //调用 transact 方法后，该远程请求会经过系统底层封装后调用到服务器端的 onTransact，客户端的该线程会被挂起，
+                    //调用 transact 后，该远程请求会经过系统底层封装后调用到服务器端的 onTransact，客户端的该线程会被挂起，
                     //那么如果该方法很耗时就要开线程调用了。而 onTransact 方法本身就是在服务器端的 binder 线程池中执行的，所以
                     //Binder方法不管耗不耗时都应该采用同步的方法实现。
-                    //我们可以看到 transact 方法传的不是 Avenger 对象，而是该对象所需要的参数的 Parcel，这就解释了上面的 onTransact
-                    //方法为什么要直接 New 一个或者采用 Parcelable 的 Create 来创建了。
+                    //我们可以看到 transact 方法传的不是 Avenger ，而是该对象的 Parcel，这就解释了后面调用的 onTransact
+                    //方法为什么要直接 New 或者采用 Parcelable 的 Create 来创建一个新 Avenger 了。
                     mRemote.transact(Stub.TRANSACTION_addAvengerIn, _data, _reply, 0);
                     _reply.readException();
                 } finally {
@@ -194,6 +196,7 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                 }
             }
 
+            //inout 为定向 tag 时，服务端将会接收到客户端传来对象的完整信息，并且客户端将会同步服务端对该对象的任何变动。
             @Override
             public void addAvengerInout(com.example.aidlserver.aidlmodel.Avenger avenger) throws android.os.RemoteException {
                 android.os.Parcel _data = android.os.Parcel.obtain();
@@ -218,15 +221,20 @@ public interface IAvengerAidlInterface extends android.os.IInterface {
                 }
             }
 
+            //out 的话,服务端将会接收到一个参数为空的对象，但服务端该“空”对象修改之后客户端会同步变动
             @Override
             public void addAvengerOut(com.example.aidlserver.aidlmodel.Avenger avenger) throws android.os.RemoteException {
                 android.os.Parcel _data = android.os.Parcel.obtain();
                 android.os.Parcel _reply = android.os.Parcel.obtain();
                 try {
                     _data.writeInterfaceToken(DESCRIPTOR);
-                    mRemote.transact(Stub.TRANSACTION_addAvengerOut, _data, _reply, 0);
+                    //从上面可知会调用到 onTransact 方法，由于参数的 tag 为 out。 那么这个
+                    //_reply 就已经被服务器端赋值了
+                    mRemote.transact(Stub.TRANSACTION_addAvengerOut, _data, _reply, 0); 
                     _reply.readException();
                     if ((0 != _reply.readInt())) {
+                        //将 _reply 的内容拷贝给 avenger，这样服务器如果对客户端传过去的 avenger
+                        //修改了的话，客户端也会同步改变
                         avenger.readFromParcel(_reply);
                     }
                 } finally {
