--- a/_posts/2018-12-03-String.md
+++ b/_posts/2018-12-03-String.md
@@ -164,8 +164,7 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 	+ `s3.intern()` 将 s3 中的字符串"11"放入常量池，因为此时常量池中不存在字符串"11"，所以它和 jdk6 一样，在常量池中生成一个 String 对象"11"，由于 jdk7 的常量池在 Heap 中了，那么它就不需要再存储一份对象了，而是直接存储堆中的引用，也就是 s3 的引用地址
 	+ `s4 = "11"` 会直接去常量池查找，如果没有找到就会创建。这时常量池已经存在，则会直接返回 s3 的引用地址，也就是堆中的地址
 	+ 那么 s3 和 s4 都是指向堆中的地址，所以 s3 == s4 为 true
-
-再来看 s 和 s2:        
+再来看 s 和 s2:          
 	+ `String s = new String("1")`会生成2个对象，常量池中的"1"和堆中的"1"，此时 s 指向堆中的"1"
 	+ `s.intern()` 由于上一句已经在常量池中创建了"1"，所以此处什么都不做
 	+ `String s2 = "1"`，此时 s2 就指向常量池中"1"
@@ -178,9 +177,8 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 	+ `String s3 = new String("1") + new String("1")`，s3 最终指向堆中的"11"，此时常量池中没有"11"
 	+ `String s4 = "11"`，将"11"放入常量池，然后 s4 指向常量池中的"11"
 	+ `s3.intern()`，由于上一句已经在常量池中创建了"11"，所以此时什么都不做
-	+ 最终 s3 指向堆中的"11"，而 s4 指向常量池中的 "11"。 所以 s3 == s4 为 false
-
-再看 s 和 s2：
+	+ 最终 s3 指向堆中的"11"，而 s4 指向常量池中的 "11"。 所以 s3 == s4 为 false      
+再看 s 和 s2：      
 	+ `String s = new String("1")` 会创建2个对象，常量池中的"1"和堆中的"1"，此时 s 指向堆中的"1"
 	+ `String s2 = "1"`，s2 指向常量池中的"1"
 	+ `s.intern()` 由于常量池中已经有"1"，所以此时什么都不做
@@ -190,10 +188,131 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 + jdk7 将 String 常量池从 Perm 区移到 Heap 区
 + 调用 String#intern() 方法时，堆中有该字符串常量时而常量池中没有，则直接在常量池中保存堆中对象的引用，而不会在常量池中重新创建对象。
 
-
 ### 实现基础
 从常量池的实现就可以看出实现该优化的基础是因为字符串不可变，因为内部是采用 HashTable 所以不用担心数据冲突进行共享。运行时，由于字符串常量池中的这个表，总是为池中的每一个唯一的字符串对象维护一个引用，这意味着它会一直引用字符串常量池中的对象，所以常量池中的对象不会被垃圾回收器回收。
+
+## String、StringBuilder、StringBuffer
++ StringBuffer 和 String 是线程安全的，StringBuilder 非线程安全
++ StringBuilder 和 StringBuffer 对象存储在堆中，String 对象存储在字符串常量池中
++ String 不可变，其余2个可变
+
+### StringBuilder 和 StringBuffer 代码层面上的区别
+```java
+public final class StringBuffer extends AbstractStringBuilder implements Serializable, CharSequence {
+    private transient char[] toStringCache;
+    static final long serialVersionUID = 3388685877147921107L;
+    private static final ObjectStreamField[] serialPersistentFields;
+
+    public StringBuffer() {
+        super(16);
+    }
+
+    public StringBuffer(int var1) {
+        super(var1);
+    }
+
+    public StringBuffer(String var1) {
+        super(var1.length() + 16);
+        this.append(var1);
+    }
+
+    public StringBuffer(CharSequence var1) {
+        this(var1.length() + 16);
+        this.append(var1);
+    }
+
+    public synchronized int length() {
+        return this.count;
+    }
+
+    public synchronized int capacity() {
+        return this.value.length;
+    }
+
+    public synchronized void ensureCapacity(int var1) {
+        super.ensureCapacity(var1);
+    }
+
+    public synchronized void trimToSize() {
+        super.trimToSize();
+    }
+}
+```
+
+```java
+public final class StringBuilder extends AbstractStringBuilder implements Serializable, CharSequence {
+    static final long serialVersionUID = 4383685877147921099L;
+
+    public StringBuilder() {
+        super(16);
+    }
+
+    public StringBuilder(int var1) {
+        super(var1);
+    }
+
+    public StringBuilder(String var1) {
+        super(var1.length() + 16);
+        this.append(var1);
+    }
+
+    public StringBuilder(CharSequence var1) {
+        this(var1.length() + 16);
+        this.append(var1);
+    }
+
+    public StringBuilder append(Object var1) {
+        return this.append(String.valueOf(var1));
+    }
+
+    public StringBuilder append(String var1) {
+        super.append(var1);
+        return this;
+    }
+
+    public StringBuilder append(StringBuffer var1) {
+        super.append(var1);
+        return this;
+    }
+```
+可以看出 StringBuffer 和 StringBuilder 的区别就是在方法上加了 synchronized。本质上，他们都是改变 char 数组中的内容，他们对外公开了修改 char 数组的方法，而 String 未公开。
+
+### 性能问题
+速度比较：StringBuilder > StringBuffer > String。
+StringBuilder > String 主要原因是在 String 中，每次拼接新的字符串，都会 new 一个 StringBuilder 对象，也就是说如果拼接N次，就需要 new 出来 N 个 StringBuilder 对象，这样无疑上速度会慢很多。StringBuilder > StringBuffer 是因为 StringBuffer 加了 synchronized 修饰，其余的操作都是继承自 AbstractStringBuilder 父类。
+
+## JDK6 中 subString 引发的内存泄漏
+jdk6 中的 subString 的实现：
+```java
+   public String substring(int beginIndex, int endIndex) {
+	...
+	return ((beginIndex == 0) && (endIndex == count)) ? this :
+	    new String(offset + beginIndex, endIndex - beginIndex, value);
+    }
+```
+它创建了一个新的 String，并将原 String 的 value 数组传到构造函数中，我们来看下构造函数：
+```java
+// Package private constructor which shares value array for speed.
+String(int offset, int count, char value[]) {
+	this.value = value; //新的 String 强引用住旧 String 的 value 数组
+	this.offset = offset;
+	this.count = count;
+}
+```
+可以看出，它出于效率考虑，新字符串与旧字符串公用一个 value 数组，导致旧字符串不能被释放。新的 JDK 已经修改了构造函数：
+```java
+  public String(char value[], int offset, int count) {
+        ...
+        this.offset = 0;
+        this.count = count;
+        this.value = Arrays.copyOfRange(value, offset, offset+count);
+    }
+```
+这样旧不会引用原 String 的 value 数组，从而解决内存泄漏问题。
 
 ## 参考文献
 + [Java String类为什么是final的？](https://www.jianshu.com/p/9c7f5daac283)   
 + [String常量池和String#intern()](https://www.jianshu.com/p/449672f6aae0)
++ [String,StringBuilder,StringBuffer对比](https://www.jianshu.com/p/76a7e20fb6f9)
++ [通过源码分析String、StringBuffer和StringBuilder](https://www.jianshu.com/p/f3b1e9e717ca)
++ [JAVA源码阅读----String、StringBuffer、StringBuilder比较以及源码解读](https://www.jianshu.com/p/c17833473af2)
