--- a/_posts/2018-12-03-String.md
+++ b/_posts/2018-12-03-String.md
@@ -30,7 +30,7 @@ public final class String implements Serializable, Comparable<String>, CharSeque
 
 那么为什么要将 String 设置为不可变呢？    
 1. 只有当字符串不可变时才有可能实现字符串常量池。字符串常量池的实现可以在运行时节约很多 heap 空间，因为不同的字符串常量都是指向池中的同一个字符串。如果它是可变的，string intern pool 就不能实现，因为如果变量的值被改变了，那么其他所有只想该值的变量都会发生改变。
-2. 如果 String 可变会引起严重的安全问题。譬如数据库的用户名、密码都是以字符串的形式传入来获得数据库连接，如果它是可变的，那么何克就可以改变字符串指向的对象的值，造成安全漏洞。
+2. 如果 String 可变会引起严重的安全问题。譬如数据库的用户名、密码都是以字符串的形式传入来获得数据库连接，如果它是可变的，那么hacker 就可以改变字符串指向的对象的值，造成安全漏洞。
 3. String 不可变让它是线程安全的。同一个字符串可以被多个线程共享。
 4. String 不可变，那么在它创建的时候就可以将 HashCode 缓存起来，不需要重新计算。这使得字符串很适合做 Map 中的键，字符串的处理速度要快过其它键的值。
 
@@ -155,7 +155,7 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 
 **对于 JDK7：**    
 由于 Perm 区默认大小只有4M，容易出现OOM。所以 JDK7 将字符串常量池从 Perm 区移到正常的 Heap(E、S、O) 中了。
-> Perm 区为永久代。本身使用永久代来实现方法去就容易遇到 OOM，而且方法区存放的内容大小很难估计，没必要放在堆中管理。JDK8 已经取消永久代，在堆外新建了 Metaspace 实现方法区。
+> Perm 区为永久代。本身使用永久代来实现方法区就容易遇到 OOM，而且方法区存放的内容大小很难估计，没必要放在堆中管理。JDK8 已经取消永久代，在堆外新建了 Metaspace 实现方法区。
 
 + 针对上面第一段代码：    
 ![]({{site.url}}/img/java/string/2.webp)
@@ -163,7 +163,7 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 	+ `String s3 = new String("1") + new String("1")` 生成了多个对象，s3 最终指向堆中的"11"，此时常量池中没有"11"
 	+ `s3.intern()` 将 s3 中的字符串"11"放入常量池，因为此时常量池中不存在字符串"11"，所以它和 jdk6 一样，在常量池中生成一个 String 对象"11"，由于 jdk7 的常量池在 Heap 中了，那么它就不需要再存储一份对象了，而是直接存储堆中的引用，也就是 s3 的引用地址
 	+ `s4 = "11"` 会直接去常量池查找，如果没有找到就会创建。这时常量池已经存在，则会直接返回 s3 的引用地址，也就是堆中的地址
-	+ 那么 s3 和 s4 都是指向堆中的地址，所以 s3 == s4 为 true
+	+ 那么 s3 和 s4 都是指向堆中的地址，所以 s3 == s4 为 true        
 再来看 s 和 s2:          
 	+ `String s = new String("1")`会生成2个对象，常量池中的"1"和堆中的"1"，此时 s 指向堆中的"1"
 	+ `s.intern()` 由于上一句已经在常量池中创建了"1"，所以此处什么都不做
@@ -173,13 +173,13 @@ jdk6 中所有打印都为 false，因为 jdk6 的常量池放在 Perm 区中，
 
 + 针对上面第二段代码：
 ![]({{site.url}}/img/java/string/3.webp)    
-首先看 s3 和 s4： 
+首先看 s3 和 s4：     
 	+ `String s3 = new String("1") + new String("1")`，s3 最终指向堆中的"11"，此时常量池中没有"11"
 	+ `String s4 = "11"`，将"11"放入常量池，然后 s4 指向常量池中的"11"
 	+ `s3.intern()`，由于上一句已经在常量池中创建了"11"，所以此时什么都不做
 	+ 最终 s3 指向堆中的"11"，而 s4 指向常量池中的 "11"。 所以 s3 == s4 为 false      
 再看 s 和 s2：      
-	+ `String s = new String("1")` 会创建2个对象，常量池中的"1"和堆中的"1"，此时 s 指向堆中的"1"
+	+ `String s = new String("1")` 会先在常量池中创建一个"1"的对象，然后 new String() 会在堆中分配内存并把字符串常量池中的"1"复制给堆中的这个 String，即创建2个对象，常量池中的"1"和堆中的"1"，此时 s 指向堆中的"1"
 	+ `String s2 = "1"`，s2 指向常量池中的"1"
 	+ `s.intern()` 由于常量池中已经有"1"，所以此时什么都不做
 	+ 同样，s == s2 也为 false
